--- a/au fil des saisons.html
+++ b/au fil des saisons.html
@@ -70,7 +70,7 @@
      </header>
 
     <main id="cheese-container">
-        <div class="pikachu"><img src="img/hiver.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/hiver.jpg" class="imagefromage">
             <p class="mois">Janvier</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Raclette">Raclette</a>, 
@@ -78,7 +78,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/hiver.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/hiver.jpg" class="imagefromage">
             <p class="mois">Février</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Camembert">Camembert</a>, 
@@ -87,7 +87,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/printemps.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/printemps.jpg" class="imagefromage">
             <p class="mois">Mars</p>
             <p>
                 <a href="error404.html">Chaource</a>, 
@@ -95,7 +95,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/printemps.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/printemps.jpg" class="imagefromage">
             <p class="mois">Avril</p>
             <p>
                 <a href="error404.html">Époisses</a>, 
@@ -105,14 +105,14 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/printemps.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/printemps.jpg" class="imagefromage">
             <p class="mois">Mai</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Saint-Nectaire">Saint-Nectaire</a>
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/ete.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/ete.jpg" class="imagefromage">
             <p class="mois">Juin</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Cabécou">Cabécou</a>, 
@@ -121,7 +121,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/ete.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/ete.jpg" class="imagefromage">
             <p class="mois">Juillet</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Saint-Nectaire">Saint-Nectaire</a>, 
@@ -130,7 +130,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/ete.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/ete.jpg" class="imagefromage">
             <p class="mois">Août</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Comté">Comté</a>, 
@@ -139,7 +139,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/automne.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/automne.jpg" class="imagefromage">
             <p class="mois">Septembre</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Maroilles">Maroilles</a>, 
@@ -147,7 +147,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/automne.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/automne.jpg" class="imagefromage">
             <p class="mois">Octobre</p>
             <p>
                 <a href="error404.html">Bleus</a>, 
@@ -156,7 +156,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/automne.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/automne.jpg" class="imagefromage">
             <p class="mois">Novembre</p>
             <p>
                 <a href="error404.html">Tommes</a>, 
@@ -165,7 +165,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="img/hiver.jpg" class="imagefromage">
+        <div class="pikachu"><img src="./Img/hiver.jpg" class="imagefromage">
             <p class="mois">Décembre</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Comté">Comté</a>, 
