--- a/au fil des saisons.html
+++ b/au fil des saisons.html
@@ -70,7 +70,7 @@
      </header>
 
     <main id="cheese-container">
-        <div class="pikachu"><img src="./Img/hiver.jpg" class="imagefromage">
+        <div class="pikachu"><img src="/Img/hiver.jpg" class="imagefromage">
             <p class="mois">Janvier</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Raclette">Raclette</a>, 
@@ -78,7 +78,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="./Img/hiver.jpg" class="imagefromage">
+        <div class="pikachu"><img src="/Img/hiver.jpg" class="imagefromage">
             <p class="mois">Février</p>
             <p>
                 <a href="" data-bs-toggle="modal" data-bs-target="#Camembert">Camembert</a>, 
@@ -87,7 +87,7 @@
             </p>
         </div>
 
-        <div class="pikachu"><img src="./Img/printemps.jpg" class="imagefromage">
+        <div class="pikachu"><img src="/Img/printemps.jpg" class="imagefromage">
             <p class="mois">Mars</p>
             <p>
                 <a href="error404.html">Chaource</a>, 
