--- a/recettes.html
+++ b/recettes.html
@@ -96,7 +96,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col accessoires">
                 <a href="" class="text-decoration-none"><div class="card h-100 border-dark">
-                    <img src="/Img/recette/plateau-et-cloche-fromages2.jpeg" class="card-img-top" alt="...">
+                    <img src="./Img/recette/plateau-et-cloche-fromages2.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-light">Nous avons testé pour vous</h5>
                         <p class="card-text text-light">La cloche à fromage.</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="col plats">
                 <a href="recette detail.html" class="text-decoration-none"><div class="card h-100 border-dark">
-                    <img src="/Img/recette/recette2.png" class="card-img-top" alt="...">
+                    <img src="./Img/recette/recette2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-light">Camembert au four</h5>
                         <p class="card-text text-light">10 min-facile.</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="col entrees">
                 <a href="" class="text-decoration-none"><div class="card h-100 border-dark">
-                    <img src="/Img/recette/recette3.jpg" class="card-img-top" alt="...">
+                    <img src="./Img/recette/recette3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-light">Salade de chèvre chaud</h5>
                         <p class="card-text text-light">25 min-moyenne.</p>
