--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="accueil.html">
-        <img src="Img\Logo\Logoblanc.png" alt="Logo"/></a>
+        <h1>CLIQUEZ POUR ENTRER</h1></a>
 </body>
 </html>
