--- a/accueil.html
+++ b/accueil.html
@@ -99,7 +99,7 @@
             <area alt="PACA" shape="rect" coords="360,389,465,473" href="bonnes adresses PACA.html">
 
             <area alt="Corse" shape="rect" coords="429,497,472,581" href="#0" id="explosion">
-                <img src="Img/explosion.gif" class="hidden" id="corse">
+                <img src="./Img/explosion.gif" class="hidden" id="corse">
 
         </map>
 
